# DynamicCalculator

./: Calculator.cpp  Calculator.h  Definitions.h  README.md  main.cpp
DLLOperations/: BaseMath.h  CMakeLists.txt  binaryPlusDLL.cpp  cosDLL.cpp  multiplicationDLL.cpp  openBracketDLL.cpp  piDLL.cpp  powDLL.cpp  sinDLL.cpp  unaryMinusDLL.cpp
dllOperations/: binaryMinusDLL.cpp  closeBracketDLL.cpp  divisionDLL.cpp  openBracketDLL.cpp  unaryPlusDLL.cpp
plugins/: BaseMath.h
